# macaroni

./: .editorconfig  Cargo.toml  README.md  justfile  rustfmt.toml  tsconfig.json
macaroni/: Cargo.toml
macaroni-playground/: Cargo.toml
macaroni-playground/public/: app.tsx  index.html  style.css  types.ts
macaroni-playground/src/: main.rs
macaroni/src/: lib.rs  macros.rs  parser.rs  types.rs  utf8.rs
