[package]
name = "macaroni-playground"
version = "0.1.0"
edition = "2021"
license = "LGPL-3.0"

[dependencies]
macaroni = { path = "../macaroni" }
axum = "0.6"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.4.0", features = ["fs", "cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"